tests/parsing/smtlib/v2.7/errors/061_declare-datatype_bad-cstr-list_1.smt2
(set-logic ALL)
(declare-datatypes ((foo 0)) (_))
